--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DetailActivity"></activity>
-        <activity android:name=".JoinActivity" />
-        <activity android:name=".LoginActivity">
+        <activity android:name=".Activitiy.DetailActivity"></activity>
+        <activity android:name=".Activitiy.JoinActivity" />
+        <activity android:name=".Activitiy.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".Activitiy.MainActivity" />
     </application>
 
 </manifest>
